sass/_misc.scss
@use 'mxin' as *;

// Won't work on Firefox, because it respects the spec, which is... lacklustrous.
// See https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_scrollbars_styling
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-track {
  background: transparent;
}
::-webkit-scrollbar-thumb {
  border-radius: 0px;
  background-color: var(--colour-overlay0);
  &:hover { background-color: var(--colour-overlay2); }
}

.cited-tools {
  $tool-bg: var(--colour-surface1);
  $gap: 1rem;
  display: flex;
  flex-wrap: wrap;
  gap: $gap;
  .tool {
    border: 1px solid $tool-bg;
    border-collapse: collapse;
    thead tr { background-color: $tool-bg; }
    td, th {
      &:nth-child(1) { padding-left: 1em; }
      &:nth-child(2) { padding: 0 1em; text-align: end; }
      &:only-child { padding: 0 1em; }
      &.excerpt {
        font-family: "Work Sans", serif;
        white-space: collapse;
      }
    }
    tbody {
      tr:first-child > td { padding-top: .5em; }
      tr:last-child  > td { padding-bottom: .5em; }
    }
    th { text-align: center; }
    a { text-decoration: none; }
    @include md {
      max-width: calc((var(--column-width) - $gap) / 2);
    }
  }
}

.user-agent * {
  all:         revert    !important;
  font-family: system-ui !important;
}

[class^=grid-] {
  display: grid;
  grid-gap: 1em;
  width: min(100%, var(--column-width)) !important;
  grid-template-rows: 1fr;
  grid-template-columns: 1fr;
}
@for $r from 1 through 3 {
  @for $c from 1 through 3 {
    .grid-#{$r}-#{$c} {
      @include md {
        grid-template-rows: repeat(#{$r}, minmax(0, 1fr));
        grid-template-columns: repeat(#{$c}, minmax(0, 1fr));
      }
    }
  }
}

